chapter 5 first version

--- a/content/chapter-04-navrh.tex
+++ b/content/chapter-04-navrh.tex
@@ -348,7 +348,7 @@ má znalost o všech subsystémech, které jsou k tomuto procesu potřeba. Tato 
 návrhový vzor \textit{Facade}~\cite{fowler2002patterns}. Na obrázku~\ref{fig:business-context-loading} je znázorněn
 navržený proces inicializace.
 
-\section{Centráln\'{\i} správa byznysových kontextů}
+\section{Centráln\'{\i} správa byznysových kontextů}\label{sec:central-administration-design}
 
 Vzhledem k nutnosti centralizovat správu byznysových kontextů se
 architektura \gls{P2P} představená v sekci~\ref{sec:p2p} nehodí.
