footnote urls are now clickable

--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -289,8 +289,8 @@ Ačkoliv existuje relativně velké množství knihoven poskytujících
 \gls{DSL} pro popis byznysových pravidel a umožňující automatickou
 distribuci byznys pravidel, žádný z nich nepodporuje dostatečně velké množství
 platforem, ve kterých by mohl být jazyk použit. Příkladem může být projekt \textit{business-ruless}
-pro jazyk Python\footnote{https://pypi.org/project/business-rules/}, projekt
-FlexRule\footnote{http://www.flexrule.com/archives/business-rule-language/} pro platformy .NET a
+pro jazyk Python\footnote{\url{https://pypi.org/project/business-rules/}}, projekt
+FlexRule\footnote{\url{http://www.flexrule.com/archives/business-rule-language/}} pro platformy .NET a
 JavaScript nebo \gls{BRMS} JRules~\cite{boyer2011ibm} od společnosti \textit{IBM} pro platformu \gls{Java EE}.
 Tato sekce se proto zaměřuje zejména na framework Drools, který používají autoři přístupu \gls{ADDA},
 a také na moderní nástroj JetBrains MPS, který umožňuje vytvářet vlastní \gls{DSL} a transformovat
@@ -303,7 +303,7 @@ ho do dalších jazyků.
 
 \subsection{Drools DSL}\label{sec:drools}
 
-Framework Drools\footnote{https://www.drools.org/} je open-source projekt realizující
+Framework Drools\footnote{\url{https://www.drools.org/}} je open-source projekt realizující
 \textit{business rule management engine} (\gls{BRMS}), tedy nástroj pro vývoj a správu byznysových
 pravidel. Framework umožňuje vývoj tzv. \textit{produkčních systémů} tvořených sadou \textit{produkčních pravidel}.
 Produkční pravidlo se skládá z levé strany (\gls{LHS} z anglického \textit{left-hand side}),
@@ -329,7 +329,7 @@ požadavkům na platformovou nezávislost.
 \subsection{JetBrains MPS}
 
 Moderním nástrojem pro tvorbu doménově specifických jazyků
-je \textit{JetBrains MPS} (Meta Programming System)\footnote{https://www.jetbrains.com/mps/}.
+je \textit{JetBrains MPS} (Meta Programming System)\footnote{\url{https://www.jetbrains.com/mps/}}.
 Staví na konceptu \textit{language-oriented programming} (\gls{LOP})~\cite{ward1994language} zaměřujícího
 se na vývoj specifického abstraktního jazyka a jeho použití pro implementaci programu. Pro překlad ze specifického
 jazyka do spustitelného kódu je použit automatický překladač. Příkladem jazyka, který využívá koncept \gls{LOP}
