--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -295,7 +295,8 @@ Jazyk Python poskytuje na rozdíl od jazyka Java téměř všechny nástroje, kt
 prototypu knihovny potřeba. Jedinou výjimkou byl modul pro obsluhu frameworku gRPC.
 Ze standardní knihovny jazyka byly využity moduly \code{typing} pro statické typování,
 \code{re} pro regulární výrazy, \code{enum} pro implementaci výčtových hodnot, \code{copy} pro
-kopírování objektů a \code{xml} pro práci s XML dokumenty.
+kopírování objektů, \code{fs} pro práci se soubory a \code{xml} pro práci s XML dokumenty.
+
 
 \section{Knihovna pro platformu Node.js}
 
