--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -57,6 +57,7 @@ unicode=true,
 \usepackage{array}
 \usepackage{afterpage}
 \usepackage{amsthm}
+\usepackage{fancyvrb}
 
 \theoremstyle{definition}
 \newtheorem*{definition}{Definice}
