fix acronyms overflow

--- a/content/appendix-D-zkratky.tex
+++ b/content/appendix-D-zkratky.tex
@@ -1,5 +1,5 @@
 %!TEX ROOT=../diploma-thesis.tex
 
 \renewcommand*{\glsnamefont}[1]{\textbf{#1}}
-\setlength{\glsdescwidth}{0.95\linewidth}
+\setlength{\glsdescwidth}{0.7\textwidth}
 \printglossary[type=\acronymtype,title={Seznam použit\'ych zkratek}]\label{ch:shortcuts}
