--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -237,10 +237,8 @@ basicstyle=\fontsize{10}{12}\selectfont\ttfamily
 
 \appendix
 
-\input{content/appendix-A-snimky}
-%\input{content/appendix-B-tabulky}
-\input{content/appendix-C-uzivatelska-prirucka}
-\input{content/appendix-D-zkratky}
-\input{content/appendix-E-cd}
+\input{content/appendix-A-zkratky}
+\input{content/appendix-B-snimky}
+\input{content/appendix-C-cd}
 
 \end{document}
