mention user manual

--- a/content/chapter-07-zaver.tex
+++ b/content/chapter-07-zaver.tex
@@ -107,8 +107,9 @@ frameworků pro reprezentaci byznysových pravidel a jejich výhod a nevýhod. N
 rešerše byl navržen framework pro správu a automatickou integraci byznysových pravidel
 v architektuře orientované na služby. Tento framework využívá koncepty aspektově orientovaného programování
 a na něm založeného přístupu \gls{ADDA}. Funkčnost navrženého řešení byla demonstrována implementací a
-otestováním prototypů knihoven pro platformy jazyků Java a Python a platformu Node.js. Tyto knihovny byly
-použity pro vývoj jednoduché ukázkové e-commerce aplikace, která je tvořena šesti službami naprogramovanými
+otestováním prototypů knihoven pro platformy jazyků Java a Python a platformu Node.js\footnote{Uživatelská
+a instalační příručka knihoven je součástí obsahu přiloženého CD}. Tyto knihovny byly použity pro vývoj
+jednoduché ukázkové e-commerce aplikace, která je tvořena šesti službami naprogramovanými
 ve třech různých jazycích. Na této aplikaci byla ukázána schopnost frameworku centrálně administrovat byznysová
 pravidla a automaticky je sdílet a integrovat do služeb aplikace. Zároveň byl změřen a analyzován
 dopad použití frameworku na počet duplikací byznysových pravidel a byl diskutován jeho vliv na
