--- a/protobuf/style.sty
+++ b/protobuf/style.sty
@@ -7,7 +7,7 @@
   % https://github.com/mewspring/latex
   \definecolor{proto_basic}{RGB}{0,0,0}             % black
   \definecolor{proto_keyword}{RGB}{0,0,255}         % blue
-  \definecolor{proto_type}{RGB}{128,0,0}            % dark red
+  \definecolor{proto_type}{HTML}{AB3700}            % dark red
   \definecolor{proto_options}{RGB}{128,0,128}       % purple
   \definecolor{proto_comment}{RGB}{0,128,0}         % dark green
   \definecolor{proto_string}{RGB}{255,0,0}          % red
@@ -24,7 +24,7 @@
   belowcaptionskip=1\baselineskip,
   backgroundcolor=\color{proto_background},
   basicstyle=\color{proto_basic}\footnotesize\ttfamily,
-	keywordstyle=[1]\color{NavyBlue},
+	keywordstyle=[1]\color{ctublue},
 	keywordstyle=[2]\color{proto_type},
 	keywordstyle=[3]\color{proto_options},
 	commentstyle=\color{proto_comment},
