--- a/content/appendix-B-snimky.tex
+++ b/content/appendix-B-snimky.tex
@@ -2,19 +2,29 @@
 
 \chapter{Přehledové obrázky a sn\'{\i}mky}
 
+\vspace{4\baselineskip}
+
+\begin{figure}[h]
+    \centering
+    \fbox{\includegraphics[width=0.9\linewidth]{figures/business-context-detail.png}}
+    \caption{Detail byznysového kontextu v centráln\'{\i} administraci}
+    \label{fig:screenshot-context-detail}
+\end{figure}
+
 \begin{figure}
     \centering
-    \includegraphics[width=0.9\linewidth]{figures/business-context-edit.png}
+    \fbox{\includegraphics[width=0.7\linewidth]{figures/business-context-edit.png}}
     \caption{Formulář pro vytvořen\'{\i} nebo úpravu byznysového kontextu v centráln\'{\i} administraci}
     \label{fig:screenshot-context-edit}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.9\linewidth]{figures/business-context-detail.png}
-    \caption{Detail byznysového kontextu v centráln\'{\i} administraci}
-    \label{fig:screenshot-context-detail}
+    \fbox{\includegraphics[width=0.7\linewidth]{figures/add-product-to-cart-fail.png}}
+    \caption{Propagace byznysového pravidla při přidáván\'{\i} produktu do koš\'{\i}ku v ukázkovém systému}
+    \label{fig:example-screenshot}
 \end{figure}
+
 
 \begin{sidewaysfigure}[ht]
     \centering
@@ -22,10 +32,3 @@
     \caption{Diagram hirearchie byznysov\'ych kontextů ukázkového systému}
     \label{fig:example-system-context-hirearchy}
 \end{sidewaysfigure}
-
-\begin{figure}
-    \centering
-    \includegraphics[width=0.9\linewidth]{figures/add-product-to-cart-fail.png}
-    \caption{Propagace byznysového pravidla při přidáván\'{\i} produktu do koš\'{\i}ku v ukázkovém systému}
-    \label{fig:example-screenshot}
-\end{figure}
